demos/fleets/default-configs/asm-gcp-gateways/default-httproute-redirect.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: http-to-https-redirect-httproute
  namespace: asm-gateways
  annotations:
    configsync.gke.io/cluster-name-selector: us-central1_gke-ap-admin-cp-00  
spec:
  parentRefs:
  - name: external-http
    namespace: asm-gateways
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
