demos/fleets/default-configs/asm-gcp-gateways/default-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: default-httproute
  namespace: asm-gateways
  annotations:
    configsync.gke.io/cluster-name-selector: us-central1_gke-ap-admin-cp-00
spec:
  parentRefs:
  - name: external-http
    namespace: asm-gateways
    sectionName: https
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: asm-ingress-gateway-xlb
      port: 443
